--- a/localfix.html
+++ b/localfix.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - Protect Mother Earth!</title>
+    <title>Portfolio - The Local Fix!</title>
 
     <link rel="stylesheet" href="styles.css">
 
