--- a/juneteenth.html
+++ b/juneteenth.html
@@ -58,7 +58,7 @@
                   <div class="row">
                       <div class="col-sm-12 col-md-12 col-lg-12">
                           <center>
-                              <img src="images/portfolio/j19-img.jpg" class="june-img" alt="juneteenth">
+                              <img src="https://annettethomas.space/images/portfolio/j19-img.jpg" class="june-img" alt="juneteenth">
                           </center>
                       </div>
                       <div class="info col-sm-6 col-md-12 col-lg-12">
