--- a/juneteenth.html
+++ b/juneteenth.html
@@ -58,7 +58,7 @@
                   <div class="row">
                       <div class="col-sm-12 col-md-12 col-lg-12">
                           <center>
-                              <img src="images/portfolio/Juneteenth-mockup.jpg" class="june-img" alt="juneteenth">
+                              <img src="images/portfolio/j19-img.jpg" class="june-img" alt="juneteenth">
                           </center>
                       </div>
                       <div class="info col-sm-6 col-md-12 col-lg-12">
@@ -70,7 +70,7 @@
                           <h1>Design</h1>
                           <p>
                               Betty wanted her website to be structured similar to the website: <a href="www.utahpride.com">utahpride</a>, but with theming that resembled African culture. Thus, the concept for the website was to have illustrations that expressed African heritage, and to use a moderate-toned color palette. Below, you can preview the exisiting mockup in live-action:<br>
-                              <a href="https://www.figma.com/proto/0wW9MAdd3NN5IynhQnou6NYD/Juneteenth?node-id=1%3A2&scaling=min-zoom" target="_blank">Juneteenth Mockup</a>
+                              <a href="https://www.figma.com/file/0wW9MAdd3NN5IynhQnou6NYD/Juneteenth?node-id=107%3A0" target="_blank">Juneteenth Mockup</a>
                           </p>
                           <hr>
                           <div class="details">
