--- a/s2s.html
+++ b/s2s.html
@@ -74,12 +74,12 @@
 
                           <center>
                             <a href="http://www.weber.edu/s2s" class="preview" target="_blank">Preview student2student</a>
-                          <br><br>
-                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a><br><br>
+                          
+                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a> 
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Access & Diversity</a>
-                          <br><br>
+                         
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Talent Search</a>
-                          <br><br> </center>
+                           </center>
                       </div>
 
                        <div class="process col-sm-12 col-md-12">
