--- a/s2s.html
+++ b/s2s.html
@@ -75,7 +75,7 @@
                           <center>
                             <a href="http://www.weber.edu/s2s" class="preview" target="_blank">Preview student2student</a>
                           
-                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a> 
+                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a> <br><br>
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Access & Diversity</a>
                          
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Talent Search</a>
