--- a/s2s.html
+++ b/s2s.html
@@ -58,7 +58,7 @@
                   <div class="row">
                       <div class="col-sm-6">
 
-                              <img src="images/portfolio/s2s(ex).png" class="s2s-img" alt="Student2Student">
+                              <img src="images/portfolio/s2s-home.png" class="s2s-img" alt="Student2Student">
 
                       </div>
                       <div class="info col-sm-6">
@@ -74,12 +74,12 @@
 
                           <center>
                             <a href="http://www.weber.edu/s2s" class="preview" target="_blank">Preview student2student</a>
-                          
-                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a> <br><br>
+                          <br><br>
+                          <a href="http://www.weber.edu/summerbridge" class="preview" target="_blank">Preview Summer Bridge</a><br><br>
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Access & Diversity</a>
-                         
+                          <br><br>
                           <a href="http://www.weber.edu/accessanddiversity" class="preview" target="_blank">Preview Talent Search</a>
-                           </center>
+                          <br><br> </center>
                       </div>
 
                        <div class="process col-sm-12 col-md-12">
