--- a/franklin.html
+++ b/franklin.html
@@ -59,33 +59,14 @@
                       <div class="info col-sm-12 col-md-12 col-lg-12">
                           <h1>Description</h1>
                           <p>
-                            At Franklin Covey, I had the opportunity to do UX/Graphic design work with the team in the creative lab as a contractor. Franklin Covey provides time management training and assessment services for educational facilities and/or individuals who are willing to learn. Some of Franklin Covey’s known works are the following textbooks that are currently being used in educational facilities today: “7 Habits of Highly Effective Principles”, “Find Your Voice”, “Inspire Others”, and “Take Charge.”
+                            I worked with the Creative Lab of Franklin Covey as a UX/Graphic Design Contractor My role was a UX/Graphic Design contractor at Franklin Covey. I assisted by transitioning four published works onto a digital course platform. All images presented on this page is copyrighted and licensed by Franklin Covey. For more information on Franklin Covey, visit their <a href="https://www.franklincovey.com/">main page</a>. 
                             <br><br>
-                            I worked on a project that involved taking the content of these textbooks and converting them to be an interactive course on an online platform. The courses were enhanced with interactive games, iconography, illustrations, and curated photos. Below I have provided some samples!
-                            <br><br>
-                            Working at Franklin Covey, I have gained experience on working with a team, being a self-starter on completing tasks, and working remote. I also have experience organizing group files, participating in meetings, and working effectively under pressure to accomplish meeting deadlines.                       
+                            Franklin Covey was developing an online course for high school students by converting their published textbooks into online digital courses. I assisted with the design by using their LMS (Learning Management System) with the following lanuages and software: HTML/CSS for content formating, Photoshop for imagery editing, Adobe Illustrator for illustrations, badge creation,  icons, and H5P for interactive gaming exercises throughout the course.Below are samples of what I have created within the courses.               
                           </p>
-                          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                              <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                  <img src="images/Badge-Samples(1)@72x-100.jpg" class="d-block w-100" alt="Farnklin Covey Badge Samples">
-                                </div>
-                                <div class="carousel-item">
-                                  <img src="images/FYV-D7-UniversalNeeds.png" class="d-block w-100" alt="Franklin Covey FindYourVoice Page Sample">
-                                </div>
-                                <div class="carousel-item">
-                                  <img src="images/portfolio/FC-sample(3).png" class="d-block w-100" alt="...">
-                                </div>
-                              </div>
-                              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                              </a>
-                              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                              </a>
-                            </div>
+                          <img src="images/Badge-Samples@2x.png" style="width:100%;" alt=""><br><br>
+                          <img src="images/franklinactivity.png" style="width:100%;" alt=""><br><br>
+                          <img src="images/franklin-courseList.jpg" style="width:100%;" alt=""><br><br>
+                          <img src="images/universalNeeds.png" style="width:100%;" alt="">
                           <i>Note: This is all work under Franklin Covey. For more information, please refer to their <a href="https://www.franklincovey.com/">main page</a></i>
                           <hr>
                           <div class="details">
